# EXecutioner-Backend

./: .env  .gitignore  README.md  alembic.ini  docker-compose.yml  dockerfile  entrypoint.sh  install.sh  install_worker.sh  pyproject.toml  requirements.txt  requirements_worker.txt  tester.py  worker.py
app/: database.py  deps.py  main.py
app/api/: __init__.py  submission.py
app/config/: __init__.py
app/models/: __init__.py  auth.py  problems.py
app/schemas/: problems.py
db-migration/: env.py
db-migration/versions/: e5e8bb49cec5_initial_tables.py
executioner_worker/: celery.py  tasks.py
service/: README.md  exeweb.service  rqworker.service  start_service.sh  start_web.sh
tests/: test_executioner_worker.py
