[tool.poetry]
name = "executioner_worker"
version = "0.1.0"
description = ""
authors = ["dravog7 <dravog78@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
celery = {extras = ["redis"], version = "^5.1.2"}
pyExecutioner = "^0.0.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
