[tool.poetry]
name = "executioner_worker"
version = "0.1.0"
description = ""
authors = ["dravog7 <dravog78@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
rq = "^1.10.0"
pyExecutioner = "^0.0.15"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
SQLAlchemy = "^1.4.23"
alembic = "^1.7.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.11.1"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
